<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_view_upload_computer"
            android:layout_width="match_parent"
            android:layout_height="200dp" />


        <TextView
            android:id="@+id/text_view_computer_name"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_view_computer_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view_computer_des"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_view_computer_name1" />

        <TextView
            android:id="@+id/text_view_computer_CNo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_view_computer_CNo" />

    </LinearLayout>


</androidx.cardview.widget.CardView>